--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,6 +38,7 @@ subjects:
 - !lcsh 'Short stories, Russian -- Translations into Finnish'
 - !lcsh 'Russia -- Fiction'
 - !lcc 'PG'
+- GITenberg
 tableOfContents: Mistä ihmiset elävät -- Kaksi ukkoa -- Vaikea on valkea sammuttaa,
   kun se vauhtihin pääsee -- Kynttilä -- Ensimmäinen viinanpolttaja.
 title: Leo Tolstoin kertomuksia
